14528
Array[_] has problems:
```scala
$$ scala
Welcome to Scala version 2.8.0.r18762-b20090924111222 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_15).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val a_wild: Array[_] = Array(1, 2)
a_wild: Array[_] = Array(1, 2)

scala> a_wild.size
<console>:6: error: value size is not a member of Array[_]
       a_wild.size
              ^

scala> a_wild foreach println
<console>:6: error: value foreach is not a member of Array[_]
       a_wild foreach println
       ^

scala> val a_any = Array(1, "Str2")
a_any: Array[Any] = Array(1, Str2)
```

Array[Any] works:
```scala
scala> a_any.size
res3: Int = 2

scala> a_any foreach println
1
Str2
```
